--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "lodash": "^4.17.15",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
